--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@clerk/nextjs": "^6.12.5",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-slot": "^1.1.2",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.1",
+    "inngest": "^3.32.8",
     "lucide-react": "^0.482.0",
     "next": "15.1.7",
     "react": "^18.0.0",
