--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,5 @@ CLERK_SECRET_KEY=sk_test_PrmL4CrQ3HwViXFm6YwhWAHHDdTOmvoAGei0ls8Ppn
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+
+GEMINI_API_KEY=AIzaSyDu8ARTjovZl6h5ZDNlAWJk6pj9A0sJmUA
